fix modal not working well on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
-@import '../node_modules/bulma/bulma.sass';
+@import '~bulma/bulma.sass';
+
+.modal {
+  pointer-events: none !important;
+}
+
+.modal-content {
+  pointer-events: all !important;
+}
